--- CHANGELOG ---

--- PyFMI-X.X ---
    * Fixed issue with getting parameters when using memory storage option (ticket:5476)
    * Added support for getting the declared type for FMI2 (ticket:5475)
    * Added option to store result files on binary format (ticket:5470)
    * Improved method to retrieve model variables (ticket:5469)
    * Added a prototype of a Master algorithm for coupled ME FMUs (ticket:5438)
    * Fixed so that a "none" result handler can be used for CS (ticket:5403)
    * Removed deprecated FMUModel (ticket:5315)
    * Updated attributes to the initialize methods to be consistent between
      FMI1 and FMI2. Also added so that setup_experiment is called through
      FMI2.initialze() if not already called (ticket:5322).
    * Added option "maxh" (maximum step-size) to the Master algorithm (ticket:5396)
    * Fixed bug with step outside simulation region for the Master algorithm (ticket:5397)

--- PyFMI-2.4 ---
    * Fixed a missed encoding of strings, used for Python 3 (ticket:5163)
    * Added timeout option for when simulating CS FMUs (ticket:5313)
    * Added option to specify if the stop time is fixed or not (ticket:5298)
    * Fixed bug where setting the maximum order had no impact (ticket:5212)
    * Added option to use central difference instead of forward differences (ticket:5204)
    * Minor bugfixes and documentation improvements.

--- PyFMI-2.3.1 ---
    * Added caching of model variables when retriving the variables lists (ticket:5007)
    * Added more information about where time is spent in a simulation (ticket:4983)
    * Improved performance when using filters (ticket:4984)

--- PyFMI-2.3 ---
    * Implemented a Master algorithm for simulation of CS FMUS
                            (ticket:4918)
    * Information from the integrator to the log (ticket:4101)
    * Parameter estimation of FMUs (ticket:4461, ticket:4809)
    * Bug fixes: plot gui (ticket:4472), pyfmi without assimulo (ticket:4509)